tests/baselines/reference/importEmptyFromModuleNotExisted.errors.txt
importEmptyFromModuleNotExisted.ts(1,16): error TS2307: Cannot find module 'module-not-existed' or its corresponding type declarations.


==== importEmptyFromModuleNotExisted.ts (1 errors) ====
    import {} from 'module-not-existed'
                   ~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'module-not-existed' or its corresponding type declarations.
    